--- a/devFlowcharter.cfg
+++ b/devFlowcharter.cfg
@@ -33,4 +33,8 @@
 -K$00400000
 -LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-U"C:\libsDE7\pngimage"
+-O"C:\libsDE7\pngimage"
+-I"C:\libsDE7\pngimage"
+-R"C:\libsDE7\pngimage"
 -DUSE_FASTMM;USE_CODEFOLDING
